# osg-deferred-rendering

./: CMakeLists.txt  LICENSE  README.md
cmake/: compiler_settings.cmake  configuration.cmake  library.config.cmake  utils.cmake
engine/: CMakeLists.txt
engine/core/engine/: CMakeLists.txt
engine/core/engine/include/: engine.h  structs.h
engine/core/engine/src/: engine.cpp
engine/samples/: CMakeLists.txt
engine/samples/deferred_rendering/: CMakeLists.txt  main.cpp
engine/samples/deferred_rendering/resources/maps/terrain/: terrain.mtl
engine/samples/deferred_rendering/resources/shaders/: g_buffer_ws.frag  g_buffer_ws.vert  light_pass.frag  light_pass.vert  texture_sampling.frag  texture_sampling.vert  texture_sampling_depth.frag  texture_sampling_depth.vert
engine/samples/deferred_rendering/src/: ColorVisitor.h  LightSource.h  TangetSpaceComputeVisitor.h  Utilities.cpp  Utilities.h  main.cpp
engine/unittests/: CMakeLists.txt
engine/unittests/include/: common_fixture.h
engine/unittests/src/: common_unittests.cpp  main.cpp
engine/unittests_framework/: CMakeLists.txt
engine/unittests_framework/include/: json_fixture.h
